@@ -209,6 +209,7 @@ fi
     -Dfile.encoding="UTF-8" \
     -Dlogback.configurationFile="${LOG_CONFIG_FILE}" \
     ${JAVA_OPTS:+${JAVA_OPTS}} \
+    --add-opens=java.base/java.nio=ALL-UNNAMED \
     -jar ${RUN_JAR:+${RUN_JAR}} \
     -cf "${CONFIG_FILE}" \
     ${REGRESSION_OPTIONS_PREFIX:+${REGRESSION_OPTIONS_PREFIX}} "$@"
